gcc/testsuite/rust/rustc/ui/issues/issue-20825.rs
pub trait Subscriber {
    type Input;
}

pub trait Processor: Subscriber<Input = Self::Input> {
// { dg-error ".E0391." "" { target *-*-* } .-1 }
    type Input;
}

fn main() {}

